--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -11,6 +11,7 @@
 @using MyComponents.SingleTodo
 @using ApiRequestComponents.TodoPost
 @using ApiRequestComponents.TodoDelete
+@using ApiRequestComponents.TodoUpdate
 
 <div class="container">
     <div class="row">
@@ -29,7 +30,8 @@
 {
     foreach (var todo in todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).OrderBy(i => i.Id))
     {
-        <div class="single-todo-container" @onclick="() => {}">
+        <TodoUpdate todo="todo"/>
+        <div class="single-todo-container" data-bs-toggle="modal" data-bs-target="#modal-id" @onclick="() => {}">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -58,7 +60,8 @@ else
 {    
     foreach(var todo in todos)
     {
-        <div class="single-todo-container" @onclick="() => {}">
+        <TodoUpdate todo="todo" modalId=@($"updateTodo-{todo.Id}")/>
+        <div class="single-todo-container" data-bs-toggle="modal" data-bs-target=@($"#updateTodo-{todo.Id}") @onclick="() => {}">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
