--- a/TodoGui/Resources/Styles/TodoGetAll.scss
+++ b/TodoGui/Resources/Styles/TodoGetAll.scss
@@ -12,10 +12,10 @@
     z-index: -1;
 }
 
-.single-todo-container:hover {
-    border: 4px solid blue;
-    cursor: pointer;
-}
+//.single-todo-container:hover {
+//    border: 4px solid blue;
+//    cursor: pointer;
+//}
 
 .single-todo {
     display: flex;
