--- a/TodoGui/Resources/Styles/TodoGetAll.scss
+++ b/TodoGui/Resources/Styles/TodoGetAll.scss
@@ -9,7 +9,7 @@
     padding: .5rem;
     margin-top: 1rem;
     display: flex;
-    z-index: -1;
+    //z-index: -1;
 }
 
 //.single-todo-container:hover {
