--- a/TodoGui/Components/ApiRequestComponents/TodoDelete.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoDelete.razor
@@ -44,7 +44,7 @@
     => new ToastMessage
         {
             Type = ToastType.Success,
-            Title = "Successfully Deleted todo Item!",
+            Title = "Successfully Deleted Todo Item!",
             Message = "That item got beefed"
         };
 
