--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -45,7 +45,9 @@
                 <div class="row">
                     <div class="col-8"></div>
                     <div class="col-2">
-                        <TodoUpdate todo="todo" />
+                        <TodoUpdate 
+                            OnUpdate="HandleChange"
+                            todo="todo" />
                     </div>
                     <div class="col-2 delete-button-container">
                         <TodoDelete 
@@ -80,7 +82,9 @@ else
                 <div class="row">
                     <div class="col-8"></div>
                     <div class="col-2">
-                        <TodoUpdate todo="todo" />
+                        <TodoUpdate 
+                            OnUpdate="HandleChange"
+                            todo="todo" />
                     </div>
                     <div class="col-2 delete-button-container">
                         <TodoDelete 
@@ -91,6 +95,10 @@ else
                 </div>
             </div>
         </div>
+        @if(todos.Count() == 0)
+        {
+            <h2>Nothing to do yet!</h2>
+        }
     }
 }
 @code{
